Fixed visible horizontal scrollbars on main navbar
no refs.
If scrollbars are always visible globally on the computer, then there was a horizontal scrollbar on the main navigation bar.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -261,6 +261,12 @@ kbd {
 /* Custom styles */
 /* ----------------------------------------------------------------------- */
 
+.navbar-container {
+    flex: 1 1 auto;
+    overflow: hidden;
+    height: 38px;
+}
+
 .grid-icon-boxes {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(124px, auto));
